Fix vertical alignment of `.icon`

--- a/class-rules.css
+++ b/class-rules.css
@@ -18,6 +18,7 @@
 	max-height: 100%;
 	width: var(--icon-size, 1em);
 	height: var(--icon-size, 1em);
+	vertical-align: bottom;
 }
 
 .round {
